<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Beginning" >

    <TextView
        android:id="@+id/text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_agreement"
        android:textColor="@color/gray20"
        android:textSize="@dimen/menu_font_size" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_user"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/ok"
        android:src="@drawable/prof" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/button_agree"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/imageView1"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="@dimen/agree_button_h"
	    android:layout_marginTop="@dimen/poke_topMargin"
	    android:background="@color/gray60"
	    android:gravity="center_vertical|center_horizontal"
	    android:text="@string/text_user_agreement"
	    android:textColor="@color/black" />

    <Button
        android:id="@+id/button_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/ok"
        android:onClick="toHome" />

</RelativeLayout>