<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_p"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/poke_topMargin"
    tools:context=".Main" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="new_user"
            android:text="@string/build"
            android:textSize="@dimen/menu_font_size" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tableRow1"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="load_user"
            android:text="@string/load"
            android:textSize="@dimen/menu_font_size" />

    </TableRow>
    
    <!-- <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tableRow2"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button_battle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showBattleTemp"
            android:text="@string/battle_show"
            android:textSize="@dimen/menu_font_size" />

    </TableRow> -->

    <!-- <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tableRow2"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showDataTemp"
            android:text="@string/title_activity_temp_data_view"
            android:textSize="@dimen/menu_font_size" />

    </TableRow> -->

    <!-- <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tableRow5"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showAreaTemp"
            android:text="@string/activity_fawwaz"
            android:textSize="@dimen/menu_font_size" />

    </TableRow>  -->

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tableRow2"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textSize="@dimen/menu_font_size"
            android:onClick="showHelp" />

    </TableRow>

</RelativeLayout>